# cmake

BasicMathLib/src/: CMakeLists.txt  main.cpp  math.cpp  math.h
BasicTemplateHdr/src/: CMakeLists.txt  main.cpp  math.h
ErrHandling/: CMakeLists.txt
ErrHandling/test/: CMakeLists.txt
HelloWorld/src/: CMakeLists.txt  main.cpp
MathSubdir/src/: CMakeLists.txt
